# chess-transformer

./: .gitignore  AGENTS.md  README.md  main.py  parse_lichess.py  pyproject.toml
_storage/bootstrap_v1/chess_transformer/: __init__.py  cli.py  config.py  spec.py
_storage/bootstrap_v1/configs/: default_experiment.json
modular_chess_gui/: __init__.py  cli.py  engine.py  gui.py  notation.py  players.py  transformer_adapter.py
simple_chess_transformer/: __init__.py  cli.py  dataset.py  lichess.py  train.py
storage/bootstrap_v1/chess_transformer/: pipeline.py
